# COMP-3700

./: .env.disabled  .gitignore  .pylintrc  README.md  pyproject.toml
.github/: TEMPLATE_README.md
.github/workflows/: main.yml
.traffic/: clones.csv  clones_chart.txt  views.csv  views_chart.txt
conf/: elec_billing-https-vhost.conf  elec_billing-vhost.conf
elec_billing/: db.sqlite3  manage.py
elec_billing/billing_system/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
elec_billing/billing_system/migrations/: 0001_initial.py
elec_billing/billing_system/templates/: base.html  index.html
elec_billing/billing_system/templates/customer/: customer.html  payment.html
elec_billing/billing_system/templates/registration/: login.html
elec_billing/elec_billing/: asgi.py  settings.py  urls.py  wsgi.py
elec_billing/static/general/css/: base.css
elec_billing/static/general/js/: particles.js
