[tool.poetry]
name = "elec_billing"
version = "0.1.0"
description = "An electricity billing system for COMP-3700"
authors = ["Will Humphlett <wah0028@auburn.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
whitenoise = "^5.3.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
